--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
 
     <!-- Register Card -->
     <div class="card w-100 shadow p-4">
-      <form [formGroup]="loginForm" (ngSubmit)="register()">
+      <form [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="form-group mb-3">
           <label>First Name</label>
           <input type="text" class="form-control" placeholder="First Name" formControlName="firstName" required />
